Mon Apr 16 09:58:23 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Config_Test.cpp: Fixed a warning with g++ builds. The
	  warning was  because of an unused function. 

Sun Apr 15 21:27:19 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Added new Configuration_Import_Export.{h,cpp}
	  files.

Sun Apr 15 19:33:19 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Configuration.cpp,
  	* ace/Configuration_Import_Export.cpp: Fixed some warnings
	  that show up with G++.  Thanks to Carlos for reporting this.

Sun Apr 15 17:13:40 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
          Disabled TAO/tests/Client_Leaks on all configurations, it is
          failing systematically because it cannot create processes fast
          enough.

Sat Apr 14 18:08:16 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Configuration_Import_Export.h:
          Fixed small typo in the @file comment for
          Configuration_Import_Export.h

Sat Apr 14 18:31:15 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/Makefile.bor: Added new Configuration_Import_Export.obj file.

        * tests/Config_Test.cpp: Added tests for the new ACE_Configuration*
          stuff.  Thanks to Jerry Odenwelder <jerry.o@mindspring.com> for
          contributing these.

        * ace/Configuration_Import_Export.{h,cpp}: Added two new files that
          do the following:

          1. Remove the import and export functionality from the
             ACE_Configuration object.
          2. Provide two new classes to import/export ACE_Configuration
             objects:

             * ACE_Registry_ImpExp import and exports in the Win32
               Registry format - this was the old import/export routine on
               ACE_Configuration.
             * ACE_Ini_ImpExp imports and exports in an INI format.  The
               import part of this was called import_config_as_strings in